--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,6 +1,6 @@
 $def with (master, glyphid, localparameters, globalparams, globalparamform, localparamform_a, localparamform_b)
 <title>
-Project $master.fontname
+Project $master.project.projectname
 </title>
 <style>
     .row h4 {
@@ -45,7 +45,7 @@ Project $master.fontname
         <h4>Font A</h4>
         <h4>Local</h4>
 
-        <form action="/view/$master.fontname/$glyphid/settings/rest/create/" method="post">
+        <form action="/view/$master.project.projectname/$glyphid/settings/rest/create/" method="post">
             <input type="submit" class="btn btn-large" value="Create Local Parameters">
             <input type="hidden" name="create" value="a">
         </form>
@@ -53,12 +53,12 @@ Project $master.fontname
         <form action="" method="post" class="localsettings">
         $:localparamform_a.render()
         </form>
-        <a href="/view/$master.fontname/$glyphid/">Back to editor</a>
+        <a href="/view/$master.project.projectname/$glyphid/">Back to editor</a>
     </div>
     <div class="col-md-4">
         <h4>Global</h4>
 
-        <form action="/view/$master.fontname/$glyphid/settings/rest/create/" method="post">
+        <form action="/view/$master.project.projectname/$glyphid/settings/rest/create/" method="post">
             <input type="submit" class="btn btn-large" value="Create Global Parameters">
             <input type="hidden" name="create" value="g">
         </form>
@@ -67,13 +67,13 @@ Project $master.fontname
         $:globalparamform.render()
         </form>
 
-        <a href="/view/$master.fontname/$glyphid/">Back to editor</a>
+        <a href="/view/$master.project.projectname/$glyphid/">Back to editor</a>
     </div>
     <div class="col-md-4">
         <h4>Font B</h4>
         <h4>Local</h4>
 
-        <form action="/view/$master.fontname/$glyphid/settings/rest/create/" method="post">
+        <form action="/view/$master.project.projectname/$glyphid/settings/rest/create/" method="post">
             <input type="submit" class="btn btn-large" value="Create Local Parameters">
             <input type="hidden" name="create" value="b">
         </form>
@@ -82,6 +82,6 @@ Project $master.fontname
         $:localparamform_b.render()
         </form>
 
-        <a href="/view/$master.fontname/$glyphid/">Back to editor</a>
+        <a href="/view/$master.project.projectname/$glyphid/">Back to editor</a>
     </div>
 </div>
