--- a/templates/view.html
+++ b/templates/view.html
@@ -1,6 +1,6 @@
 $def with (master, glyphid, A_glyphjson, B_glyphjson, M_glyphjson, localparametersA, localparametersB, globalparams, pointform, origins)
 <title>
-Project $master.fontname
+Project $master.project.projectname
 </title>
 <link rel="stylesheet" type="text/css" href="/static/mfg.css"/>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.9/paper.js"></script>
@@ -16,7 +16,7 @@ Project $master.fontname
     </div>
   
     <div class="well">
-      <h4>Parameters Font A <small><a href="/view/$master.fontname/$glyphid/settings/">change</a></small></h4>
+      <h4>Parameters Font A <small><a href="/view/$master.project.projectname/$glyphid/settings/">change</a></small></h4>
 
       $if not localparametersA:
         <div class="label label-danger">This font has not specified local parameters</div>
@@ -44,7 +44,7 @@ Project $master.fontname
     <canvas width="400" height="400" id="canvas-m"></canvas>
 
     <div class="well">
-      <h4>Global Parameters <small><a href="/view/$master.fontname/$glyphid/settings/">change</a></small></h4>
+      <h4>Global Parameters <small><a href="/view/$master.project.projectname/$glyphid/settings/">change</a></small></h4>
 
       $if not globalparams:
         <div class="label label-danger">This font has not specified global parameters</div>
@@ -72,7 +72,7 @@ Project $master.fontname
     </div>
 
     <div class="well">
-      <h4>Parameters Font B <small><a href="/view/$master.fontname/$glyphid/settings/">change</a></small></h4>
+      <h4>Parameters Font B <small><a href="/view/$master.project.projectname/$glyphid/settings/">change</a></small></h4>
       $if not localparametersB:
         <div class="label label-danger">This font has not specified local parameters</div>
       $else:
@@ -113,7 +113,7 @@ ControlPoints.prototype.drawOn = function(canvas) {
     var point = canvas.getPoint(Number(datapoint.x), 500 - Number(datapoint.y), 0);
     point.y += +200;
 
-    this.paths.push({point: point, pointnr: datapoint.data.pointnr, data: datapoint.data});
+    this.paths.push({point: point, data: datapoint.data});
   }
 }
 
@@ -121,14 +121,10 @@ ControlPoints.prototype.drawOn = function(canvas) {
 function GlyphOrigin(dataGlyph) {
   this.dataGlyph = dataGlyph;
   this.gpoints = [];
-  this.texts = [];
   this.paths = [];
 }
 
 GlyphOrigin.prototype.delete = function() {
-  for (var k = 0; k < this.texts.length; k++) {
-    this.texts[k].remove();
-  }
 
   for (var k = 0; k < this.gpoints.length; k++) {
     this.gpoints[k].gpath.remove();
@@ -145,7 +141,6 @@ GlyphOrigin.prototype.drawOn = function(canvas) {
 
   this.gpoints = [];
   this.paths = [];
-  this.texts = [];
   for (var i = 0; i < this.dataGlyph.length; i++) {
       for (var j = 0; j < this.dataGlyph[i].contours.length; j++) {
           var path = new canvas.paper.Path();
@@ -161,22 +156,20 @@ GlyphOrigin.prototype.drawOn = function(canvas) {
                                         Number(contour.y) - Number(contour.controls[1].y));
               segment = new canvas.paper.Segment(point, handleIn, handleOut);
 
-              var gpath = canvas.paper.Path.Rectangle(point, 1);
-              gpath.strokeColor = 'green';
-              gpath.closed = true;
-              gpath.selected = true;
+              if (canvas.controlpoints) {
+                var gpath = canvas.paper.Path.Rectangle(point, 1);
+                gpath.strokeColor = 'green';
+                gpath.closed = true;
+                gpath.selected = true;
 
-              if (canvas.controlpoints && this.gpoints.length) {
-                  var text = new canvas.paper.PointText(point);
-                  text.content = canvas.controlpoints.paths[this.gpoints.length].pointnr;
-                  this.texts.push(text);
+                if (canvas.controlpoints && this.gpoints.length) {
+                    this.gpoints.push({zpoint: canvas.controlpoints.paths[this.gpoints.length],
+                                          gpath: gpath});
 
+                } else if (canvas.controlpoints) {
                   this.gpoints.push({zpoint: canvas.controlpoints.paths[this.gpoints.length],
                                         gpath: gpath});
-
-              } else if (canvas.controlpoints) {
-                this.gpoints.push({zpoint: canvas.controlpoints.paths[this.gpoints.length],
-                                      gpath: gpath});
+                }
               }
 
               path.add(segment);
@@ -277,10 +270,9 @@ Canvas.prototype.onMouseUp = function(event) {
       var y = event.point.y - 200;
       var xycoord = this.restore_original_coords(new paper.Point(x, y));
       jQuery.post('', {
-          pointnr: this.currentpath.zpoint.pointnr,
+          id: this.currentpath.zpoint.data.id,
           x: xycoord.x,
-          y: 500 - xycoord.y,
-          source: this.source
+          y: 500 - xycoord.y
         },
         function(data) {
             this.controlpoints.dataPoints = jQuery.parseJSON(data).zpoints;
@@ -316,11 +308,10 @@ Canvas.prototype.onMouseUp = function(event) {
 
 
 Canvas.prototype.saveParamRequest = function(val, successhandler) {
-  jQuery.post('/view/$master.fontname/$glyphid/save-point/',
+  jQuery.post('/view/$master.project.projectname/$glyphid/save-point/',
               {name: this.parameterform.find('select').val(),
                value: val,
-               pointnr: this.currentpath.zpoint.data.pointnr,
-               ab_source: this.currentpath.zpoint.data.fontsource})
+               id: this.currentpath.zpoint.data.id})
         .fail(this.saveParamException.bind(this))
         .success(successhandler || this.saveParamSuccess.bind(this));
 }
