--- a/templates/view.html
+++ b/templates/view.html
@@ -133,7 +133,11 @@ ControlPoints.prototype.drawOn = function(canvas) {
     if (!datapoint.iszpoint) {
       continue;
     }
-    var point = canvas.getPoint(Number(datapoint.x), 500 - Number(datapoint.y), 0);
+
+    pp = canvas.getPoint(Number(datapoint.x), Number(datapoint.y));
+    ppr = canvas.restore_original_coords(pp);
+    console.log("{x: " + datapoint.x + ", y:" + datapoint.y + "}" + ' - ' + pp + ' - ' + "{x: " + ppr.x + ", y:" + ppr.y + "}");
+    var point = canvas.getPoint(Number(datapoint.x), 500 - Number(datapoint.y));
     point.y += +200;
 
     var gpath = canvas.paper.Path.Rectangle(point, 1);
@@ -235,12 +239,12 @@ function Canvas(canvasid, width, height, source) {
 }
 
 Canvas.prototype.getPoint = function(x, y) {
-  var r = resize(x, y, this.width, this.height, 390 - 100, 390 - 100)
+  var r = resize(x, y, Number(this.width), Number(this.height), 390 - 100, 390 - 100);
   return new this.paper.Point(r.x, r.y);
 }
 
 Canvas.prototype.restore_original_coords = function(point) {
-  return resize(point.x, point.y, 390 - 100, 390 - 100, this.width, this.height);
+  return resize(point.x, point.y, 390 - 100, 390 - 100, Number(this.width), Number(this.height));
 }
 
 Canvas.prototype.renderGlyph = function(edges) {
@@ -408,7 +412,11 @@ jQuery(
 
     A_canvas.draw();
 
+    console.log('');
+    console.log('FontB');
+    console.log('');
     var B_EDGE_JSON = $:B_glyphjson;
+    console.log(B_EDGE_JSON.width + ", " + B_EDGE_JSON.height);
     var B_canvas = new Canvas('canvas-b', B_EDGE_JSON.width, B_EDGE_JSON.height, 'b');
     B_canvas.setZpoints($:origins['b']);
     B_canvas.renderGlyph(B_EDGE_JSON.edges);
