--- a/templates/view.html
+++ b/templates/view.html
@@ -292,7 +292,7 @@ Canvas.prototype.onMouseUp = function(event) {
       var x = event.point.x;
       var y = event.point.y - 200;
       var xycoord = this.restore_original_coords(new paper.Point(x, y));
-      jQuery.post('/view/$master.project.projectname/$:"{0:03d}".format(master.version)/$glyphid/save-point/', {
+      jQuery.post('/view/$master.project.projectname/$:"{0:03d}".format(master.version),$:"{0:03d}".format(masterfontb.version)/$glyphid/save-point/', {
           id: this.currentpath.data.glyphoutline_id,
           x: xycoord.x,
           y: 500 - xycoord.y
@@ -331,7 +331,7 @@ Canvas.prototype.onMouseUp = function(event) {
 
 
 Canvas.prototype.saveParamRequest = function(val, successhandler) {
-  jQuery.post('/view/$master.project.projectname/$:"{0:03d}".format(master.version)/$glyphid/save-param/',
+  jQuery.post('/view/$master.project.projectname/$:"{0:03d}".format(master.version),$:"{0:03d}".format(masterfontb.version)/$glyphid/save-param/',
               {name: this.parameterform.find('select').val(),
                value: val,
                id: this.currentpath.data.id})
