create master from new instance

--- a/templates/view.html
+++ b/templates/view.html
@@ -49,7 +49,7 @@ Project $master.project.projectname
   <div class="col-md-4" style="border: solid 2px black;">
     <h4>Metapolation</h4>
 
-    <a href="/view/$master.project.projectname/$:'{0:03d}'.format(master.version)/create/" class="btn btn-large btn-success">Create master from instance</a>
+    <a href="/view/$master.project.projectname/$:'{0:03d}'.format(master.version),$:'{0:03d}'.format(masterfontb.version)/create/" class="btn btn-large btn-success">Create master from instance</a>
     
     <canvas width="400" height="400" id="canvas-m"></canvas>
 
