--- a/templates/specimen.html
+++ b/templates/specimen.html
@@ -15,6 +15,8 @@ $def with (project, instances)
 
 
 $for instance in instances:
+	instance $instance.version from $project.projectname
+
 	<div contenteditable="true" style="font-size: 32px; font-family: '$project.projectname.$instance.version'">
 	The quick brown fox jumps over a lazy dog
 	</div>
