make font larger to 172pt for specimen demo

--- a/templates/specimen.html
+++ b/templates/specimen.html
@@ -17,6 +17,6 @@ $def with (project, instances)
 $for instance in instances:
 	instance $instance.version from $project.projectname
 
-	<div contenteditable="true" style="font-size: 32px; font-family: '$project.projectname.$instance.version'">
+	<div contenteditable="true" style="font-size: 172pt; font-family: '$project.projectname.$instance.version'">
 	The quick brown fox jumps over a lazy dog
 	</div>
