--- a/templates/specimen.html
+++ b/templates/specimen.html
@@ -18,5 +18,5 @@ $for instance in instances:
 	instance $instance.version from $project.projectname
 
 	<div contenteditable="true" style="font-size: 172pt; font-family: '$project.projectname.$instance.version'">
-	The quick brown fox jumps over a lazy dog
+	Hamburger
 	</div>
