--- a/templates/view.html
+++ b/templates/view.html
@@ -386,7 +386,7 @@ Canvas.prototype.saveParamSuccess = function(data) {
 
       if (jQuery(e.target).attr('command') == 'cancel') {
         var paramname = this.parameterform.find('select').val();
-        this.saveParamRequest(this.currentpath.zpoint.data[paramname], this.saveParamCanceled.bind(this));
+        this.saveParamRequest(this.currentpath.data[paramname], this.saveParamCanceled.bind(this));
       } else {
         this.controlpoints.dataPoints = jQuery.parseJSON(data).zpoints;
         this.controlpoints.drawOn(this);
